--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -89,11 +89,6 @@ blockquote {
     display: inline;
   }
 
-  blockquote .glyphicon-star,
-  blockquote .glyphicon-star-empty {
-    color: #1ABC9C;
-  }
-
 .carousel-caption {
   font-size: 40px;
   font-size: 2.75vw;
@@ -108,7 +103,7 @@ blockquote {
 }
 
 .email-heading {
-  font-size: calc( 18px + (30 - 18) * ( (100vw - 400px) / (1000 - 400) ) );
+  font-size: calc( 14px + (24 - 14) * ( (100vw - 400px) / (1200 - 400) ) );
 }
 
 .field_with_errors {
@@ -117,6 +112,16 @@ blockquote {
   border: solid 1px #ff3333;
   padding:8px;
 }
+
+.glyphicon-star,
+.glyphicon-star-empty {
+  vertical-align: -2px;
+  color: #1ABC9C;
+}
+  blockquote .glyphicon-star,
+  blockquote .glyphicon-star-empty {
+    vertical-align: baseline;
+  }
 
 h1, h2, h3, h4, h5, h6 {
   margin:0;
@@ -143,6 +148,7 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  line-height: normal;
 }
 
 //Image styles
