Added placeholder message in case a place does not have any reviews

--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -15,8 +15,10 @@
           <%= render 'star_rating', rating: place.avg_rating %>
           (<%= place.comments.count %> reviews)
         </h4>
-        <br />
+      <% else %>
+        <h4>No reviews yet! :(</h4>
       <% end %>
+      <br />
       <i><%= place.address %></i><br /><br />
       <p><%= place.description %></p>
       <% if place.comments.present? %>
